--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Calligraffitti&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Calligraffitti&family=Poppins:wght@400;500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Calligraffitti&family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -32,6 +33,7 @@ html,body{
 body{
     background-color: rgb(255, 255, 255)
     ;
+    font-family: 'Inter', sans-serif;
 }
 
 .roboto{
