--- a/client/src/index.css
+++ b/client/src/index.css
@@ -31,7 +31,7 @@ html,body{
 }
 
 body{
-    background-color: rgb(255, 255, 255)
+    background-color: rgb(255, 255, 255);
     ;
     font-family: 'Inter', sans-serif;
 }
